--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -168,14 +168,14 @@ ping_2 : "🏓 ᴩᴏɴɢ : <code>{0}ᴍs</code>\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛ
 queue_1 : "❍ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "❍ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>❍ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "<b>❖ ᴍᴜsɪᴄ ʙᴏᴛ ᴏɴ sᴛʀᴇᴀᴍɪɴɢ ⏤͟͟͞͞★</b>\n\n<b>❖ ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ ➥ {0}\n\n❖ ᴛɪᴛʟє ➥</b> {1}\n\n<b>❖ ᴛɪᴍᴇ ➥</b> {2} ᴍɪɴᴜᴛᴇs\n\n<b>❖ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➥</b> {3}"
-queue_5 : "❍ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
+queue_4 : "<b>✨ ǫᴜᴇᴜᴇ ᴘᴏsɪᴛɪᴏɴ.... #{0}\n\n🎧 sᴏɴɢ :</b> {1}\n<b>🕚 ʟᴇɴɢᴛʜ :</b> {2} ᴍɪɴs\n<b>🥀 ʀᴇǫᴜᴇsᴛᴇʀ :</b> {3}"
+queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\n❍ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ᴀᴄᴛɪᴠᴀᴛᴇᴅ ✨</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ ꜰᴏʀ ᴀ ᴍᴏᴅᴇʀɴ ᴍᴜꜱɪᴄ ᴇxᴘᴇʀɪᴇɴᴄᴇ 💕</u></b>"
-stream_2 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}\n➖➖➖➖➖➖➖➖➖➖➖"
+stream_1 : "<b>🎬  ɴᴏᴡ ᴘʟᴀʏɪɴɢ.... |</b>\n\n<b>🎧 ᴛɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>⏱️ ʟᴇɴɢᴛʜ :</b> {2} ᴍɪɴs\n<b>🥀 ʀᴇǫᴜᴇsᴛᴇʀ :</b> {3}‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ "
+stream_2 : "<b>🎬  ɴᴏᴡ ᴘʟᴀʏɪɴɢ.... |</b>\n\n<b>🎧 sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ 𝖴𝗋𝗅 ]\n<b>🥀 ʀᴇǫᴜᴇsᴛᴇʀ :</b> {0}"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "ʙᴀᴄᴋ"
